// Visual regression test scaffold for UI components
// This uses jest-image-snapshot for image comparison
// and @testing-library/react for rendering components

import { render } from '@testing-library/react';

// Example placeholder component for demonstration
const ExampleComponent = () => (
  <div style={{ width: 200, height: 100, background: 'lightblue', color: 'black' }}>
    Visual Regression Test Example
  </div>
);

describe('Visual Regression: ExampleComponent', () => {
  it('matches the previous snapshot', async () => {
    // Render the component to a container
    const { container } = render(<ExampleComponent />);
    expect(container).toMatchSnapshot();
  });
});

// Example: Theme preview component
const ThemePreview = ({ theme }: { theme: string }) => (
  <div style={{ width: 200, height: 100, background: theme === 'dark' ? '#222' : '#eee', color: theme === 'dark' ? '#fff' : '#111' }}>
    Theme: {theme}
  </div>
);

describe('Visual Regression: ThemePreview', () => {
  it('matches the light theme snapshot', async () => {
    const { container } = render(<ThemePreview theme="light" />);
    expect(container).toMatchSnapshot();
  });
  it('matches the dark theme snapshot', async () => {
    const { container } = render(<ThemePreview theme="dark" />);
    expect(container).toMatchSnapshot();
  });
});

// Example: Status indicator component
const StatusIndicator = ({ status }: { status: 'ok' | 'error' | 'loading' }) => (
  <div data-testid="status-indicator">
    {status === 'ok' && <span style={{ color: 'green' }}>✔ OK</span>}
    {status === 'error' && <span style={{ color: 'red' }}>✖ Error</span>}
    {status === 'loading' && <span style={{ color: 'orange' }}>… Loading</span>}
  </div>
);

describe('Visual Regression: StatusIndicator', () => {
  it('matches the OK status snapshot', async () => {
    const { container } = render(<StatusIndicator status="ok" />);
    expect(container).toMatchSnapshot();
  });
  it('matches the Error status snapshot', async () => {
    const { container } = render(<StatusIndicator status="error" />);
    expect(container).toMatchSnapshot();
  });
  it('matches the Loading status snapshot', async () => {
    const { container } = render(<StatusIndicator status="loading" />);
    expect(container).toMatchSnapshot();
  });
});

// Real UI component: UISettingsPanel (settings panel with tabs and controls)
describe('Visual Regression: UISettingsPanel', () => {
  it('renders general and advanced settings tabs', () => {
    // Simulate the HTML content for the settings panel (as in getGeneralSettingsContent and getAdvancedSettingsContent)
    const GeneralTab = () => (
      <div className="setting-group">
        <h2>General Settings</h2>
        <div className="setting-item">
          <label htmlFor="theme">Theme</label>
          <select id="theme">
            <option value="system">System Default</option>
            <option value="light">Light</option>
            <option value="dark">Dark</option>
          </select>
        </div>
        <div className="setting-item">
          <label htmlFor="language">Language</label>
          <select id="language">
            <option value="en">English</option>
            <option value="es">Español</option>
            <option value="fr">Français</option>
          </select>
        </div>
      </div>
    );
    const AdvancedTab = () => (
      <div className="setting-group">
        <h2>Advanced Settings</h2>
        <div className="setting-item">
          <label htmlFor="caching">Enable Caching</label>
          <input type="checkbox" id="caching" />
        </div>
        <div className="setting-item">
          <label htmlFor="logging">Logging Level</label>
          <select id="logging">
            <option value="error">Error</option>
            <option value="warn">Warning</option>
            <option value="info">Info</option>
            <option value="debug">Debug</option>
          </select>
        </div>
      </div>
    );
    const { container: general } = render(<GeneralTab />);
    expect(general).toMatchSnapshot();
    const { container: advanced } = render(<AdvancedTab />);
    expect(advanced).toMatchSnapshot();
  });
});
